# bodex

./: Cargo.toml  README.md  config.toml
src/: db-cp.rs  db.rs  inventory.rs  main-cp.rs  main.rs  models.rs  ui_handlers.rs
src/db/: marcas.rs  mod.rs  productos.rs  usuarios.rs  ventas.rs
src/models/: marca.rs  medida.rs  mod.rs  producto.rs  rol.rs  tipo_empaque.rs  usuario.rs  venta.rs
ui/: app_window.slint  app_window_cp-2.slint  app_window_cp.slint
ui/components/: data_table.slint  filter_input.slint  header.slint  input_number.slint  input_text.slint  select_input.slint  sidebar.slint  table_row.slint  table_view.slint
ui/views/: dashboard_view.slint  login_view.slint
ui/views/producto/: lista_productos.slint  lista_productos_cp.slint  nuevo_producto.slint
