[package]
name = "bodex"
version = "0.1.0"
edition = "2021"

[dependencies]
# Limpiamos las features de Skia para evitar errores en Windows y agilizar la descarga
slint = { version = "1.3.2" , features = ["backend-android-activity-05"] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
lazy_static = "1.5.0"
android-activity = "0.5" # Asegúrate de que esta versión coincida con la del feature de arriba

[build-dependencies]
slint-build = "1.3.2"

[lib]
name = "bodex"  # El nombre de tu proyecto
crate-type = ["cdylib"]
path = "src/lib.rs" # Antes decía main.rs, cámbialo a lib.rs

[package.metadata.android]
package = "com.jose.bodex"
label = "Bodex App"
build_targets = ["aarch64-linux-android"]
