[package]
name = "bodex"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
android = ["slint/backend-android-activity-05", "android-activity", "slint/libm"]
# Cambiamos esta línea para incluir renderer-software y backend-winit
desktop = ["slint/std", "slint/compat-1-2", "slint/renderer-software", "slint/backend-winit"]

[dependencies]
# Cambiamos slint para que use las features definidas arriba
slint = { version = "1.3.2", default-features = false, optional = true }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
lazy_static = "1.5.0"
android-activity = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"] }
regex = "1.10"

[build-dependencies]
slint-build = "1.3.2"

[lib]
name = "bodex"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.android]
package = "com.jose.bodex"
label = "Bodex App"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]
